[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/prefabs/actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://gfx/models/characters/dilan.glb" type="PackedScene" id=2]
[ext_resource path="res://gfx/models/characters/vertex_color_outlined.material" type="Material" id=3]
[ext_resource path="res://gfx/ui/flame_butt_press.png" type="Texture" id=4]
[ext_resource path="res://gfx/ui/flame_butt.png" type="Texture" id=5]
[ext_resource path="res://scripts/ai/dilan_attacks.gd" type="Script" id=6]
[ext_resource path="res://gfx/ui/flame_butt_disable.png" type="Texture" id=7]
[ext_resource path="res://scenes/prefabs/effects/flame_effect.tscn" type="PackedScene" id=8]
[ext_resource path="res://sound/flamethrower.wav" type="AudioStream" id=9]

[node name="Dilan" instance=ExtResource( 1 )]
max_health = 4

[node name="DilanAttacks" type="Node" parent="." index="0"]
script = ExtResource( 6 )

[node name="Model" parent="." index="1" instance=ExtResource( 2 )]

[node name="dilan" parent="Model/dilan_rig/Skeleton" index="0"]
material/0 = ExtResource( 3 )

[node name="FlameAttach" type="BoneAttachment" parent="Model/dilan_rig/Skeleton" index="1"]
transform = Transform( -0.99996, 0, 0.00888971, 0, -1, 0, 0.00888971, 0, 0.99996, 0.00959323, 4.83124, 0.0250694 )
bone_name = "flamethrower"

[node name="FlameHole" type="Spatial" parent="Model/dilan_rig/Skeleton/FlameAttach" index="0"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, -0.00082503, -0.546234, -0.0928035 )

[node name="FlameEffect" parent="Model/dilan_rig/Skeleton/FlameAttach/FlameHole" index="0" instance=ExtResource( 8 )]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
perpetrator_path = NodePath("../../../../../..")

[node name="Particles" parent="Model/dilan_rig/Skeleton/FlameAttach/FlameHole/FlameEffect" index="3"]
emitting = false

[node name="Label3D" parent="." index="3"]
text = ""

[node name="FlameButt" type="TextureButton" parent="PlayerUI" index="0" groups=["player_ui"]]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -141.0
margin_right = 1.0
margin_bottom = -77.0
rect_scale = Vector2( 2, 2 )
disabled = true
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_disabled = ExtResource( 7 )

[node name="FlameSound" type="AudioStreamPlayer" parent="." index="5"]
stream = ExtResource( 9 )

[connection signal="pressed" from="PlayerUI/FlameButt" to="DilanAttacks" method="_flamethrower_activate"]

[editable path="Model"]
[editable path="Model/dilan_rig/Skeleton/FlameAttach/FlameHole/FlameEffect"]
